# Pulsar-Installer

./: Cargo.toml  README.md
crates/installer/: Cargo.toml
crates/installer/src/: config.rs  error.rs  lib.rs  main.rs  traits.rs  uninstaller.rs
crates/installer/src/download/: github.rs  manager.rs  mod.rs  verifier.rs
crates/installer/src/platform/: detector.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/installer/src/steps/: check_requirements.rs  create_directories.rs  create_shortcuts.rs  extract_files.rs  finalize.rs  mod.rs
crates/installer/src/ui/: app.rs  complete.rs  components.rs  installation.rs  installer_view.rs  license.rs  mod.rs  path_selection.rs  welcome.rs
docs/: OS_INSTALLATION.md
examples/: uninstall.rs
