[package]
name = "pulsar-installer"
version = "0.1.0"
edition.workspace = true
description = "Modern, cross-platform installer for the Pulsar game engine"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
smol.workspace = true

# Installer-specific dependencies
async-trait = "0.1"
indicatif = "0.17"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.8"
walkdir = "2.5"
futures = "0.3"
async-channel = "2.3"
reqwest.workspace = true
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows.workspace = true
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.5"

[lints]
workspace = true
